[package]
name = "open_lol"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = { version = "0.2.1", git = "https://github.com/slint-ui/slint" }
rust-ini = "0.18.0"
#itertools = "0.10.2"

[dependencies.winapi]
version = "0.3.9"
features = ["sysinfoapi", "winnt", "shlobj", "minwindef", "commdlg"]

[target.'cfg(target_os="windows")'.build-dependencies]
winres = "^0.1"

[profile.release]
opt-level = 2
lto = true
codegen-units = 1